// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "height": "400px",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Template__TemplateWrapper-sc-1i4nzbu-1 fcneQZ"
    id="Knobs"
    rows={null}
  >
    <section
      className="Template__Region-sc-1i4nzbu-0 iXAock"
      id="A"
      placeholder="A"
      tabIndex={0}
    />
    <section
      className="Template__Region-sc-1i4nzbu-0 iXAock"
      id="B"
      placeholder="B"
      tabIndex={1}
    />
    <section
      className="Template__Region-sc-1i4nzbu-0 iXAock"
      id="C"
      placeholder="C"
      tabIndex={2}
    />
    <section
      className="Template__Region-sc-1i4nzbu-0 iXAock"
      id="D"
      placeholder="D"
      tabIndex={3}
    />
    <section
      className="Template__Region-sc-1i4nzbu-0 iXAock"
      id="E"
      placeholder="E"
      tabIndex={4}
    />
  </section>
</div>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Template__TemplateWrapper-sc-1i4nzbu-1 eoezdg"
  id="Standard"
  rows={null}
>
  <section
    className="Template__Region-sc-1i4nzbu-0 FUfDo"
    id="A"
    placeholder="A"
    tabIndex={0}
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100%",
          "justifyContent": "center",
        }
      }
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 iYDwFP"
        fontSize="1.2rem"
        fontWeight="400"
        letterSpacing="1px"
      >
        A
      </h6>
    </div>
  </section>
  <section
    className="Template__Region-sc-1i4nzbu-0 FUfDo"
    id="B"
    placeholder="B"
    tabIndex={1}
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100%",
          "justifyContent": "center",
        }
      }
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 iYDwFP"
        fontSize="1.2rem"
        fontWeight="400"
        letterSpacing="1px"
      >
        B
      </h6>
    </div>
  </section>
  <section
    className="Template__Region-sc-1i4nzbu-0 FUfDo"
    id="C"
    placeholder="C"
    tabIndex={2}
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100%",
          "justifyContent": "center",
        }
      }
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 iYDwFP"
        fontSize="1.2rem"
        fontWeight="400"
        letterSpacing="1px"
      >
        C
      </h6>
    </div>
  </section>
</section>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "height": "250px",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Template__TemplateWrapper-sc-1i4nzbu-1 eRUJKE"
    id="Configured"
    rows={null}
  >
    <section
      className="Template__Region-sc-1i4nzbu-0 iQLSJN"
      id="A"
      placeholder="A"
      tabIndex={0}
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
          }
        }
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 iYDwFP"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          A
        </h6>
      </div>
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-0 gnTYTC"
      id="B"
      placeholder="B"
      tabIndex={1}
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
          }
        }
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 iYDwFP"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          B
        </h6>
      </div>
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-0 fpUwfD"
      id="C"
      placeholder="C"
      tabIndex={2}
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
          }
        }
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 iYDwFP"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          C
        </h6>
      </div>
    </section>
  </section>
</div>
`;

exports[` 4`] = `
<div
  style={
    Object {
      "height": "400px",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Template__TemplateWrapper-sc-1i4nzbu-1 kjziUP"
    id="Template Overlay"
    rows={null}
  >
    <section
      className="Template__Region-sc-1i4nzbu-0 dWBGhk"
      id="A"
      placeholder="A"
      tabIndex={1}
    >
      <form
        className="Search__SearchContainer-sey9om-0 fZklca"
        id="Search_E3"
        onSubmit={[Function]}
      >
        <div
          className="Flex__FlexWrapper-sc-7b3s7m-0 fnZddR Search__SearchInput-sey9om-1 kOYYsS"
          height={null}
          id={null}
          overflow={null}
          width={null}
        >
          <button
            className="Button__StyledButton-sc-1v7sls2-0 fzwqte Search__SearchButton-sey9om-3 dEHLVj"
            disabled={false}
            htmlFor={null}
            id="Search_E3-search-button"
            name="Search_E3-search-button"
            onClick={[Function]}
            tabIndex="1"
            type="button"
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 gdKPCq Button__LabelWrapper-sc-1v7sls2-1 jPrDKg"
              id={null}
              rows={null}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-search fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
                color={null}
                data-icon="search"
                data-prefix="far"
                focusable="false"
                fontSize="inherit"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </section>
          </button>
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 QMoEv TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr Search__SearchTextInput-sey9om-2 hMPSlm"
            id="Search_E3-search-bar_container"
            rows={null}
          >
            <input
              autoComplete="off"
              className="TextInput__Input-sc-1fep8p8-3 fRqKBj"
              cols=""
              disabled={false}
              id="Search_E3-search-bar"
              list={null}
              name="Search_E3-search-bar"
              onBlur={null}
              onChange={[Function]}
              onFocus={null}
              onKeyPress={null}
              onKeyUp={[Function]}
              pattern={null}
              placeholder="Search Location"
              rows=""
              type="search"
              value=""
            />
          </section>
        </div>
      </form>
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-0 ixmnVz"
      id="B"
      placeholder="B"
      tabIndex={2}
    >
      <button
        className="Button__StyledButton-sc-1v7sls2-0 fPEsgi"
        disabled={false}
        htmlFor={null}
        id={null}
        name={null}
        onClick={null}
        tabIndex="1"
        type="button"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 lfpPyk Button__LabelWrapper-sc-1v7sls2-1 dAnZOo"
          id={null}
          rows="max-content 1fr"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="circle"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 dnJMnA"
            color={null}
            cursor="pointer"
            fontSize="1rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            Button
          </label>
        </section>
      </button>
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-0 hekmFO"
      id="C"
      placeholder="C"
      tabIndex={3}
    >
      <button
        className="Button__StyledButton-sc-1v7sls2-0 fPEsgi"
        disabled={false}
        htmlFor={null}
        id={null}
        name={null}
        onClick={null}
        tabIndex="1"
        type="button"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 lfpPyk Button__LabelWrapper-sc-1v7sls2-1 dAnZOo"
          id={null}
          rows="max-content 1fr"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="circle"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 dnJMnA"
            color={null}
            cursor="pointer"
            fontSize="1rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            Button
          </label>
        </section>
      </button>
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-0 eSFnUl"
      id="D"
      placeholder="D"
      tabIndex={4}
    >
      <button
        className="Button__StyledButton-sc-1v7sls2-0 fPEsgi"
        disabled={false}
        htmlFor={null}
        id={null}
        name={null}
        onClick={null}
        tabIndex="1"
        type="button"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 lfpPyk Button__LabelWrapper-sc-1v7sls2-1 dAnZOo"
          id={null}
          rows="max-content 1fr"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="circle"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 dnJMnA"
            color={null}
            cursor="pointer"
            fontSize="1rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            Button
          </label>
        </section>
      </button>
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-0 dzDmEA"
      id="E"
      placeholder="E"
      tabIndex={5}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 dZWZkq Picker__InputContainer-sc-1xwpkqn-0 eOStD"
        id="standard"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 iisbNI"
          color={null}
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
          onClick={null}
        >
          Color Palette
        </label>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 hrhkGQ"
          id={null}
          rows={null}
        >
          <button
            className="Picker__Swatch-sc-1xwpkqn-1 dylrIR"
            color="#EBEAEC"
            height="1.5rem"
            onClick={null}
            width="1.5rem"
          />
          <button
            className="Picker__Swatch-sc-1xwpkqn-1 dylrIR"
            color="#D9ECEC"
            height="1.5rem"
            onClick={null}
            width="1.5rem"
          />
          <button
            className="Picker__Swatch-sc-1xwpkqn-1 dylrIR"
            color="#80959D"
            height="1.5rem"
            onClick={null}
            width="1.5rem"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-check fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
              color={null}
              data-icon="check"
              data-prefix="far"
              focusable="false"
              fontSize="inherit"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </button>
          <button
            className="Picker__Swatch-sc-1xwpkqn-1 dylrIR"
            color="#63B1CD"
            height="1.5rem"
            onClick={null}
            width="1.5rem"
          />
          <button
            className="Picker__Swatch-sc-1xwpkqn-1 dylrIR"
            color="#06BFAE"
            height="1.5rem"
            onClick={null}
            width="1.5rem"
          />
          <button
            className="Picker__Swatch-sc-1xwpkqn-1 dylrIR"
            color="#095593"
            height="1.5rem"
            onClick={null}
            width="1.5rem"
          />
          <button
            className="Picker__Swatch-sc-1xwpkqn-1 dylrIR"
            color="#F3822B"
            height="1.5rem"
            onClick={null}
            width="1.5rem"
          />
          <button
            className="Picker__Swatch-sc-1xwpkqn-1 eMFreG"
            color="#FFBF00"
            height="1.5rem"
            onClick={null}
            width="1.5rem"
          />
        </section>
      </section>
    </section>
  </section>
  <div
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  />
</div>
`;
